assets/styles.css
@import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");

body {
  font-family: "Staatliches", Helvetica, Arial, sans-serif;
}

header p {
  font-family: "Staatliches", Helvetica, Arial, sans-serif;
  color: white;
}

p,
h3 {
  font-family: Helvetica, Arial, sans-serif;
  text-align: justify;
  font-weight: bold;
  color: black;
}

@media (min-width: 1000px) {
  h1 {
    font-size: 5em;
  }
}

@media (max-width: 1000px) {
  h1 {
    font-size: 2.5em;
  }
}

@media (min-width: 1000px) {
  h2 {
    font-size: 4em;
  }
}

@media (max-width: 1000px) {
  h2 {
    font-size: 2em;
  }
}

@media (min-width: 1000px) {
  h3 {
    font-size: 2em;
  }
}

@media (max-width: 1000px) {
  h3 {
    font-size: 1.5em;
  }
}

p {
  font-size: 1em;
}

@media (max-width: 1000px) {
  p {
    font-size: 1em;
  }
}

.content-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.container {
  max-width: 100%;
}

/**
 * HERO
 */

header {
  width: 100%;
  height: 100vh;
  background-color: #000;
  background-image: url("./images/beaugrenelle-home.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: auto 100%;
  color: #fff;
}

header #arrow-down {
  position: absolute;
  z-index: 2000;
  font-size: 2.5em;
  bottom: 0;
  right: 0;
  padding: 10px;
}

header a {
  color: white;
  text-decoration: none;
}

header a:hover {
  color: cornflowerblue;
}

header > div {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.4);
}

header h1 {
  text-align: center;
}

header nav {
  position: fixed;
  z-index: 2000;
  top: 0px;
  right: 0px;
}

header nav.open {
  width: 100vw;
  height: 100vh;
}

header nav.open > div {
  width: 100%;
  height: 100%;

  background-color: rgba(0, 0, 0, 0.9);
}

header nav div.burger-menu {
  position: absolute;
  top: 20px;
  right: 25px;
  width: 15px;
  height: 30px;
  cursor: pointer;
}

header nav div.burger-menu > div {
  width: 22px;
  height: 22px;
}

header nav div.burger-menu div.bar {
  width: 22px;
  height: 2px;
  margin: 4px 0px;
  transition: 0.45s cubic-bezier(0.4, 0, 0.2, 1);
}

header nav div.burger-menu div.bar {
  width: 22px;
  height: 2px;
  margin: 4px 0px;
  transition: 0.45s cubic-bezier(0.4, 0, 0.2, 1);
}

.color-insta {
  background: linear-gradient(135deg, #bc1888 0%, #dc2743 50%, #eeb722 100%);
}

header nav.open div.burger-menu div.bar-2 {
  width: 0px;
}

header nav.open div.burger-menu div.bar-1 {
  transform: translateY(6px) rotate(135deg);
}

header nav.open div.burger-menu div.bar-3 {
  transform: translateY(-6px) rotate(225deg);
}

header nav ul.menu {
  display: none;
}

header nav.open ul.menu {
  position: absolute;
  top: 0px;
  left: 0px;

  display: block;
}

header div.insta-logo {
  position: fixed;
  top: 18px;
  left: 15px;
  width: 30px;
  height: 30px;
  z-index: 2000;
}

.insta-header {
  width: 35px;
  height: 35px;
}

.blue-letter {
  color: cornflowerblue;
}

header p {
  text-align: center;
  font-size: 25px;
}

section .row {
  padding: 0 20px;
}

section h2 {
  padding-bottom: 20px;
}

/**
 * BLACK MODE
 */

.black-mode {
  background-color: #000;
  color: #fff;
}

.black-mode h2 {
  text-align: right;
}

.black-mode h4 {
  color: white;
  text-align: center;
}

.black-mode p {
  text-align: right;
  color: white;
}

/**
 * WHITE MODE
 */

.white-mode {
  background-color: white;
  color: black;
}

.white-mode a {
  color: black;
  text-decoration: none;
}

.exposition img {
  cursor: pointer;
}

/* CAROUSEL */
.carousel {
  margin-top: 180px;
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
  height: 100px;
  width: 100px;
  background-image: none;
}

.carousel-control-next-icon:after {
  content: ">";
  font-size: 60px;
  color: white;
}

.carousel-control-prev-icon:after {
  content: "<";
  font-size: 60px;
  color: white;
}

/* LIGHTBOX */
#lightbox {
  position: fixed;
  z-index: 1000;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  display: none;
}

#lightbox.active {
  display: flex;
  justify-content: center;
  align-items: center;
}

#lightbox img {
  max-width: 100%;
  max-height: 100%;
  padding: 2px;
  background-color: black;
  border: 2px solid white;
}

#full-screen-div {
  position: fixed;
  display: none;
  z-index: 3000;
  bottom: 15px;
  left: 15px;
}

#full-screen-title {
  color: white;
  text-align: center;
}

#full-screen-div button {
  font-size: 20px;
}

#button-close {
  color: black;
  border: 0;
  border-radius: 10%;
}

/**
 * CONTENT 3
 */
.profil-img {
  max-height: 150px;
  width: auto;
  border-radius: 50%;
  margin: 0 auto;
  margin-bottom: 10px;
}

#text-on-me {
  text-align: center;
  padding-top: 20px;
}

/**
 * CONTENT 3
 */

#remerciements a {
  color: white;
  text-decoration: none;
}

.superman-logo {
  width: 20px;
  height: 20px;
}

/**
 * MENU
 */
.menu {
  display: inline-block;
  position: fixed;
  width: 100%;
  margin-top: 50px;
  text-align: center;
}

.menu > li {
  list-style: none;
  font-size: 1.5rem;
  padding-top: 5px;
}

.effect {
  text-decoration: none;
  box-shadow: inset 0 0 0 0 cornflowerblue;
  color: #54b3d6;
  padding: 0 0.25rem;
  margin: 0 -0.25rem;
  transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
}

.effect:hover {
  color: black;
  box-shadow: inset 200px 0 0 0 cornflowerblue;
}

/*
 * APPEAR DURING SCROLLING
 */
.reveal {
  opacity: 0;
  transform: translateY(-30px);
}

.reveal-visible {
  opacity: 1;
  transform: translateY(0);
  transition: 1s cubic-bezier(0.5, 0, 0, 1);
}

